@@ -1,6 +1,6 @@
 #
 #
-# $Id: indimail-mta.spec.in,v 1.345 2021-08-19 19:55:07+05:30 Cprogrammer Exp mbhangui $
+# $Id: indimail-mta.spec.in,v 1.346 2021-08-20 13:08:45+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -1539,7 +1539,7 @@ else
   fi
   count=2
 fi
-default_domain=$([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n)
+default_domain=$(([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n) | sed 's/^\([^\.]*\)\.\([^\.]*\)\./\2\./')
 count=`expr $count + 1`
 echo "$count. Change your default domain in %{qsysconfdir}/control/defaultdomain"
 count=`expr $count + 1`
@@ -1893,7 +1893,7 @@ fi
 # this host's name in /etc/indimail/control/idhost, so that qmail-inject
 # generates Message-ID without any risk of collision
 if [ ! -f %{qsysconfdir}/control/idhost ] ; then
-  default_domain=$([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || `uname -n`)
+  default_domain=$(([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n) | sed 's/^\([^\.]*\)\.\([^\.]*\)\./\2\./')
   echo $default_domain > %{qsysconfdir}/control/idhost
 fi
 if [ "%{_libdir}" != "/usr/lib64" -a "%{_libdir}" != "/usr/lib" ] ; then
