@@ -1,6 +1,6 @@
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.608 2021-08-17 13:16:29+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.609 2021-08-20 13:09:40+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -26,7 +26,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.608 2021-08-17 13:16:29+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.609 2021-08-20 13:09:40+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -1714,8 +1714,16 @@ else
 	elif [ -f $sysconfdir/control/global_vars/DEFAULT_DOMAIN ] ; then
 		defaultDomain=`cat $sysconfdir/control/global_vars/DEFAULT_DOMAIN`
 	else
-		defaultDomain=$([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n)
+		defaultDomain=$(([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n) | sed 's/^\([^\.]*\)\.\([^\.]*\)\./\2\./')
 	fi
+fi
+if [ -f "$DESTDIR"$sysconfdir/control/global_vars/DEFAULT_DOMAIN ] ; then
+	t=$(cat "$DESTDIR"$sysconfdir/control/global_vars/DEFAULT_DOMAIN)
+	if [ ! "$t" = "$defaultDomain" ] ; then
+		echo $defaultDomain > "$DESTDIR"$sysconfdir/control/global_vars/DEFAULT_DOMAIN
+	fi
+else
+	echo $defaultDomain > "$DESTDIR"$sysconfdir/control/global_vars/DEFAULT_DOMAIN
 fi
 }
 
@@ -1930,8 +1938,9 @@ if [ ! -d "$DESTDIR"$sysconfdir/tcp ] ; then
 fi
 echo "Creating Default qmail Control Files"
 hostname=$([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n)
-echo "servicedir.conf"
 echo "me"
+echo "defaulthost"
+echo "envnoathost"
 echo "defaultdomain"
 echo "plusdomain"
 echo "locals"
@@ -2673,9 +2682,10 @@ if [ -f $QmailBinPrefix/sbin/vchkpass ] ; then
 	fi
 fi
 if [ -n "$authsmtp" -o "$forceauthsmtp" ] ; then
-echo "$AUTHM" > $conf_dir/AUTHMODULES
+	echo "$AUTHM" > $conf_dir/AUTHMODULES
 else
-> $conf_dir/AUTHMODULES
+	> $conf_dir/AUTHMODULES
+	echo > $conf_dir/DISABLE_VRFY
 fi
 (
 dump_run_header
@@ -2809,7 +2819,7 @@ else
 	echo $NO_OF_QUEUES > $conf_dir/QUEUE_COUNT
 	echo $FIRST_QUEUE  > $conf_dir/QUEUE_START
 fi
-defaultDomain=$([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n)
+defaultDomain=$(([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n) | sed 's/^\([^\.]*\)\.\([^\.]*\)\./\2\./')
 if [ ! -d "$DESTDIR"$cntrldir/global_vars ] ; then
 	mkdir -p "$DESTDIR"$cntrldir/global_vars
 	$chown root:qmail "$DESTDIR"$cntrldir/global_vars
@@ -8927,24 +8937,30 @@ fi
 if [ -n "$default_domain" ] ; then
 	defaultDomain=$default_domain
 else
-	defaultDomain=$([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n)
+	defaultHost=$([ -n "$HOSTNAME" ] && echo "$HOSTNAME" || uname -n)
+	defaultDomain=$(echo $defaultHost | sed 's/^\([^\.]*\)\.\([^\.]*\)\./\2\./')
 fi
+# config-fast - me, defaulthost, envnoathost, defaultdomain,
+# plusdomain, locals, rcpthosts, virtualdomains
+/usr/libexec/indimail/config-fast $defaultHost
 orig=$(cat "$DESTDIR"$CONTROLDIR/me)
 out=$(mktemp -t recontrolXXXXXX)
-for i in defaultdomain defaulthost envnoathost locals me nodnscheck \
-	plusdomain rcpthosts smtpgreeting global_vars/DEFAULT_DOMAIN \
-	global_vars/QMAILDEFAULTHOST
+for i in nodnscheck locals rcpthosts smtpgreeting global_vars/QMAILDEFAULTHOST
 do
 	if [ -f "$DESTDIR"$CONTROLDIR/$i ] ; then
-		sed -e "s{$orig{$defaultDomain{g" "$DESTDIR"$CONTROLDIR/$i > $out
+		sed -e "s{$orig{$defaultHost{g" "$DESTDIR"$CONTROLDIR/$i > $out
 		diff "$DESTDIR"$CONTROLDIR/$i $out > /dev/null
 		if [ $? -ne 0 ] ; then
-			echo "updating $DESTDIR""$CONTROLDIR/$i with $defaultDomain"
-			sed -i "s{$orig{$defaultDomain{g" "$DESTDIR"$CONTROLDIR/$i
+			echo "updating $DESTDIR""$CONTROLDIR/$i with $defaultHost"
+			sed -i "s{$orig{$defaultHost{g" "$DESTDIR"$CONTROLDIR/$i
 		fi
 		/bin/rm -f $out
 	fi
 done
+orig=$(cat "$DESTDIR"$CONTROLDIR/global_vars/DEFAULT_DOMAIN)
+if [ ! " $orig" = "$defaultDomain" ] ; then
+	echo $defaultDomain > "$DESTDIR"$CONTROLDIR/global_vars/DEFAULT_DOMAIN
+fi
 }
 
 create_cert()
