@@ -122,6 +122,9 @@ o installer can now install, uninstall and set permissions
 70. indimail-mta.spec, PKGBUILD.in, create_services.in,
 	debian/indimail-mta.postinst - changes for modified dknewkey
 71. qmail-smtpd.c - disable VRFY using DISABLE_VRFY env variable
+- 20/08/2021
+72. svctool, indimail-mta.spec, PKGBUILD, debian postinst: remove host
+    component from default domain
 
 * 
 Release 2.13 Start 14/02/2021
